# snipping-bot

./: .autogen-stamp  .env.example  .gitignore  .gitleaks.toml  10Owasps.md  66PLUS-TESTING-TYPES.MD  BACKTEST-ENHANCEMENTS-SUMMARY.md  BACKTEST-FEATURES.MD  BACKTEST_RESULTS_SUMMARY.MD  BRANCHING-STRATEGY-AND-SECURITY.MD  CHANGES_SUMMARY.md  CHECKLIST_TRACKING_GUIDE.MD  CI-PIPELINE-FIXES-SUMMARY.MD  CI-PIPELINE-FIXES.MD  COMPLETE-FEATURES-MAP.MD  COMPLETE-WEB-UI-SETUP.md  COMPLIANCE_SUMMARY.MD  CORE-COMPONENT-SNIPPING-BOT.MD  Cargo.toml  DEVELOPMENT-GUIDE.MD  DEVELOPMENT_GUIDELINES.MD  ENHANCED_TRADING_CHECKLIST.MD  ENTER-MARKET.MD  FEATURES-MAP-ALIGNMENT.MD  FINAL-66PLUS-TESTING-SUMMARY.md  FIX-REDIS-TEST-ISSUE.MD  HOW-SECURITY-CHECK-LIST-HELP-OUT.MD  IMPLEMENTATION_SUMMARY.md  IMPLEMENTED_FEATURES.MD  LIVE_TRADING_CHECKLIST.MD  Market-enter.md  NEXT-BACKTEST-IMPLEMENTATION.MD  PRODUCT_ROADMAP.MD  PROFIT-CHCK-LIST.MD  README.md  README.md.bak  REDIS-TEST-FIX.MD  RUN DOCKER TO SEE THE SERVICE UP.MD  RUN-DASHBOARD-WEB-UI-COMMAND.MD  SECURITY-AND-LICENSE-FIXES.MD  (+33 more)
.github/: dependabot.yml
.github/workflows/: auto-pull-upstream.yml  auto-push.yml  cei-validation.yml  ci-fast.yml  ci-integration.yml  ci-nightly.yml  ci.yml  codeql.yml  debug-secrets.yml  security-ci.yml  security-compliance.yml  security-monitoring.yml  security.yml  test-telegram.yml  testing-66plus.yml
attestations/: cosign.json
benches/: gas_bidding.rs
ci/: run-test-group.sh  wait-for-service.sh
config/: idp.json
configs/: app.toml  backtest-example.toml  chaos-scenarios.toml  checklist-progress.template.toml  checklist-progress.toml  compliance-config.toml  fork-test-example.toml  forward-test-example.toml  paper-trade-example.toml  risk.toml  risk_comprehensive.toml  risk_simple.toml  routes.toml  secrets.example.toml  test-config.toml  walk-forward-example.toml
configs/chains/: arbitrum.toml  bsc.toml  ethereum.toml  optimism.toml  polygon.toml
configs/strategies/: arbitrage_strategy.toml  example_strategy.toml  (+2 more)
crates/sniper-backtest/: Cargo.toml
crates/sniper-backtest/src/: lib.rs
crates/sniper-bench/: Cargo.toml
crates/sniper-bench/src/: lib.rs  main.rs  stress_test.rs
crates/sniper-bench/tests/: benchmark_test.rs  enhanced_stress_test.rs  load_test.rs  stress_test.rs
crates/sniper-cex/: Cargo.toml
crates/sniper-cex/src/: auth.rs  lib.rs  rest.rs  ws.rs
crates/sniper-cex/tests/: integration_test.rs
crates/sniper-core/: Cargo.toml
crates/sniper-core/src/: bus.rs  config.rs  env.rs  errors.rs  lib.rs  prelude.rs  types.rs
crates/sniper-nft/: Cargo.toml
crates/sniper-nft/src/: lib.rs  signals.rs
crates/sniper-nft/src/market_clients/: mod.rs
crates/sniper-policy/: Cargo.toml
crates/sniper-policy/src/: compliance.rs  compliance_loader.rs  compliance_monitor.rs  compliance_service.rs  geo.rs  kyc.rs  lib.rs  venue.rs
crates/sniper-security/: Cargo.toml
crates/sniper-security/src/: api_security.rs  auth_testing.rs  lib.rs  penetration_testing.rs  vulnerability_scanning.rs
crates/sniper-security/tests/: api_security_tests.rs  auth_testing_tests.rs  penetration_testing_tests.rs  vulnerability_scanning_tests.rs
crates/sniper-signals/: Cargo.toml
crates/sniper-signals/src/: lib.rs  normalize.rs
crates/sniper-signals/src/offchain/: dex_ws.rs  mod.rs  price_feeds.rs
crates/sniper-signals/src/onchain/: liquidity_events.rs  mod.rs  pair_created.rs  trading_enabled.rs
crates/sniper-signals/src/social/: github_release.rs  mod.rs  multisig_watch.rs
crates/sniper-storage/: Cargo.toml
crates/sniper-storage/src/: lib.rs  outbox.rs  redis_locks.rs  repo_positions.rs  repo_runs.rs  repo_trades.rs
crates/sniper-telemetry/: Cargo.toml
crates/sniper-telemetry/src/: lib.rs  metrics.rs  tracing.rs
crates/sniper-telemetry/src/alerts/: mod.rs  slack.rs  telegram.rs  webhook.rs
crates/sniper-wasm-dashboard/: Cargo.toml  README.md  build.ps1  build.sh  index.html
crates/sniper-wasm-dashboard/assets/static/css/: styles.css
crates/sniper-wasm-dashboard/src/: lib.rs
crates/svc-analytics/: Cargo.toml
crates/svc-analytics/src/: main.rs
crates/svc-backtest/: Cargo.toml
crates/svc-backtest/src/: main.rs
crates/svc-dashboard/: Cargo.toml
crates/svc-dashboard/src/: main.rs
crates/svc-dashboard/static/: index.html
crates/svc-executor/: Cargo.toml
crates/svc-executor/src/: main.rs
crates/svc-gateway/: Cargo.toml
crates/svc-storage/: Cargo.toml
crates/svc-storage/src/: main.rs
examples/: compliance_demo.rs  profit_simulation.rs
infra/: compose-full.yml  compose.yml
ops/: DEPLOYMENT_RUNBOOK.md  INCIDENT_RESPONSE_RUNBOOK.md  MONITORING_ALERTING_RUNBOOK.md  README.md  SECURITY_PROCEDURES_RUNBOOK.md
sbom/: syft.spdx.json
scripts/: add-license-info.ps1  check-analytics.ps1  check-services.ps1  configure-trading.ps1  dev_run_local.sh  e2e_localnet_down.sh  e2e_localnet_up.sh  final-check.bat  final-verification.ps1  fmt.sh  generate-compliance-report.py  generate-test-files.py  lint.sh  monitor-performance.ps1  quick-start-trading.ps1  run-66plus-tests.ps1  run-all-services.ps1  run-backtest.ps1  run-security-checks.ps1  run_complete_tests.sh  run_compliance_tests.ps1  security-dashboard.py  security-verification.ps1  setup-testing-framework.ps1  simple-verify.ps1  stop-all-services.ps1  update-checklist-progress.ps1  validate-strategy.ps1  validate-trading-checklist.ps1  verify-security-compliance.ps1  verify-security-pipeline.ps1  verify-testing-implementation.ps1  verify-testing.bat
tests/: 01_unit.rs  02_integration_chain.rs  03_router_quotes.rs  04_strategy_launch.rs  05_e2e_localnet.rs  backtest_test.rs  cei_validation_test.rs  complete_run_test.rs  core_components_test.rs  full_system_integration.rs  happy_path.rs  integration_backtest_tests.rs  integration_risk_enhancements.rs  integration_security_tests.rs  integration_test.rs  mod.rs  phase2_integration.rs  risk_enhancements_demo.rs  risk_integration_tests.rs  security_compliance_tests.rs  security_integration_tests.rs  security_test.rs  storage_integration.rs  wasm_dashboard_test.rs
(+266 files in other folders)
