[package]
name = "sniper-backtest"
version = "0.1.0"
edition = "2021"

[dependencies]
sniper-core = { path = "../sniper-core" }
sniper-ml = { path = "../sniper-ml" }
sniper-risk = { path = "../sniper-risk" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde_json = "1.0"
csv = "1.1"