[package]
name = "sniper-backtest"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
csv = "1"
sniper-core = { path = "../sniper-core" }
sniper-ml = { path = "../sniper-ml" }
sniper-risk = { path = "../sniper-risk" }