[package]
name = "sniper-cex"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
sniper-core = { path = "../sniper-core" }