[package]
name = "sniper-policy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml = "0.8"
tempfile = "3.8"

[dev-dependencies]
tracing-subscriber = "0.3"