[package]
name = "sniper-security"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sniper-telemetry = { path = "../sniper-telemetry" }
sniper-authz = { path = "../sniper-authz" }

[dev-dependencies]
tokio-test = "0.4"