[package]
name = "sniper-telemetry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true, features = ["json"] }
chrono = { workspace = true, features = ["serde"] }
prometheus = "0.13"