[package]
name = "sniper-wasm-dashboard"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Request",
  "RequestInit",
  "Response",
  "Window",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
gloo-timers = "0.3"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"