[package]
name = "svc-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
sniper-core = { path = "../sniper-core" }
sniper-exec = { path = "../sniper-exec" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }