[package]
name = "svc-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
sniper-core = { path = "../sniper-core" }
anyhow = { workspace = true }
eyre = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
