[package]
name = "svc-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
sniper-core = { path = "../sniper-core" }
anyhow = { workspace = true }
eyre = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
